# pyDXHR

./: .gitignore  LICENSE  README.md  bigfile_unpack.spec  drm_decompress.spec  drm_extract.spec  drm_to_gltf.spec  drm_unpack.spec  example.env  filelist_generic.txt  main.spec  material_dump.spec  pyproject.toml  requirements.txt  setup.py  unit_gltf_convert.spec
.run/: Build sphinx docs.run.xml  Build sphinx html.run.xml
app/: main.py  requirements.txt
docs/: .buildinfo  CNAME  FMODTesting.html  about.html  cli.html  development.html  docs.html  entrypoints.html  genindex.html  index.html  md_index.html  notes.html  objects.inv  package.html  py-modindex.html  ramble.html  references.html  search.html  searchindex.js  unreal.html  utilities.html
examples/: collision_read.py  database_read.py  drm_decompress.py  drm_read.py  drm_unpack.py  email_modify.py  extract_strings.py  extract_usm.py  fmod_sound_extract.py  gltf_export.py  imf_library.py  ireader_modify.py  locals_modify.py  material_read.py  mul_demux.py  obj_library.py  pc_shaderlib_read.py  ps3_unit_export.py  rendermesh_read.py  resolvers.py  scenario_export.py  scenario_read.py  section_names.py  texture_dump.py  texture_replacement.py  ui_export.py  unit_export.py  usm_demux.py
ksy/: BigfileHeader.ksy  DDS.ksy  DRM.ksy  MultiplexStream.ksy  PCD.ksy  PS3T.ksy  README.md  RenderModel.ksy  RenderModelBuffer.ksy  RenderTerrain.ksy  RenderTerrainGroup.ksy  RenderTerrainHeader.ksy  Vertices.ksy  locals.ksy
mods/: NobodyAskedForThis.py  RenderModelSwap.py
pyDXHR/: __init__.py
sphinx_docs/: about.md  conf.py  docs.rst  entrypoints.md  index.rst  md_index.md  package.md  ramble.md  references.md
tests/: All.py  ArchiveUnpack.py  DRMDecompressSimple.py  DRMRefs.py  DRMSwap.py  ExtractSectionData.py  FilenameComparison.py  Hmm.py  HmmXML.py  IMFSwap.py  MasterunitGLTF.py  ObjectSwap.py  ReadDRM.py  ReadUnit.py  RenderModel.py  Scenario.py  ScenarioRenderModels.py  UnitDRM_PS3.py  UnitGLTF.py  bigfile_tests.py  drm_tests.py  (+1 more)
(+323 files in other folders)
